<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:showDividers="middle"
    android:divider="@drawable/torrent_table_mode_divider"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/torrent_name"
            style="@style/BaseTheme.HeaderText" />

        <TextView
            android:id="@+id/torrent_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/torrent_BaseTheme.TorrentInfoText" />
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/layout_torrent_name"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:theme="@style/Widget.Design.TextInputLayout">-->
<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/torrent_name"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="text|textNoSuggestions"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="48dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/torrent_upload_torrent_into"
                style="@style/BaseTheme.HeaderText" />

            <TextView
                android:id="@+id/upload_torrent_into"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/torrent_BaseTheme.TorrentInfoText" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/folder_chooser_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/dir_chooser_title"
            android:src="@drawable/ic_folder_grey600_24dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/torrent_sequential_download"
            style="@style/BaseTheme.HeaderText" />

        <CheckBox
            android:id="@+id/sequential_download"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/torrent_enable_sequential_download" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_torrent_size_and_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:divider="@drawable/torrent_table_mode_divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/torrent_size"
                style="@style/BaseTheme.HeaderText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/torrent_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center_vertical"
                    style="@style/torrent_BaseTheme.TorrentInfoText" />

                <TextView
                    android:id="@+id/free_space"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/torrent_file_count"
                style="@style/BaseTheme.HeaderText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/torrent_file_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    style="@style/torrent_BaseTheme.TorrentInfoText" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/torrent_hash_sum"
            style="@style/BaseTheme.HeaderText" />

        <TextView
            android:id="@+id/torrent_hash_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/torrent_BaseTheme.TorrentInfoText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_torrent_added"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/torrent_added_date"
            style="@style/BaseTheme.HeaderText" />

        <TextView
            android:id="@+id/torrent_added"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/torrent_BaseTheme.TorrentInfoText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_torrent_create_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/torrent_create_date"
            style="@style/BaseTheme.HeaderText" />

        <TextView
            android:id="@+id/torrent_create_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/torrent_BaseTheme.TorrentInfoText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_torrent_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/header_torrent_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/torrent_comment"
            style="@style/BaseTheme.HeaderText" />

        <TextView
            android:id="@+id/torrent_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:linksClickable="true"
            style="@style/torrent_BaseTheme.TorrentInfoText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_torrent_created_in_program"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/header_torrent_created_in_program"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/torrent_created_in_program"
            style="@style/BaseTheme.HeaderText" />

        <TextView
            android:id="@+id/torrent_created_in_program"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/torrent_BaseTheme.TorrentInfoText" />
    </LinearLayout>
</LinearLayout>